[gd_scene load_steps=28 format=2]

[ext_resource path="res://UI/Pause.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/FloorAndMap/IMG_1830.PNG" type="Texture" id=3]
[ext_resource path="res://EnemyType1/EnemySpawner.gd" type="Script" id=4]
[ext_resource path="res://Assets/Clouds/Clouds 5/tileable_grass.png" type="Texture" id=5]
[ext_resource path="res://UI/HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://Particles/Blood.tscn" type="PackedScene" id=7]
[ext_resource path="res://Door/Door.tscn" type="PackedScene" id=8]
[ext_resource path="res://UI/Shop.tscn" type="PackedScene" id=9]
[ext_resource path="res://Build/BuildModeHUD.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Sound_Effect/dorisha-mountaineer-main-version-23618-01-50.mp3" type="AudioStream" id=11]
[ext_resource path="res://GameScene.gd" type="Script" id=12]
[ext_resource path="res://UI/SwitchWeapons.tscn" type="PackedScene" id=14]
[ext_resource path="res://CharacterSelection/CharacterSelection.tscn" type="PackedScene" id=15]
[ext_resource path="res://FreeRoam/FreeRoamCamera.tscn" type="PackedScene" id=16]
[ext_resource path="res://CharacterSelection/CharacterSelectionHUD.tscn" type="PackedScene" id=17]
[ext_resource path="res://MysteryBox/MysteryBox.tscn" type="PackedScene" id=18]
[ext_resource path="res://MysteryBox/MysteryBoxUI.tscn" type="PackedScene" id=19]
[ext_resource path="res://Door/DoorUI.tscn" type="PackedScene" id=20]

[sub_resource type="NavigationPolygon" id=2]
vertices = PoolVector2Array( 975, 562, 1121, 715, -47, 694, -38, -8, 952, 414, 878, 311, 773, -13 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 4, 0, 3, 5 ), PoolIntArray( 5, 3, 6 ) ]
outlines = [ PoolVector2Array( -38, -8, 773, -13, 878, 311, 952, 414, 975, 562, 1121, 715, -47, 694 ) ]

[sub_resource type="NavigationPolygon" id=3]
vertices = PoolVector2Array( 1238, 1529, 1241, 1743, 751, 1685, 770, 1247, 1170, 1263, 240, 1243, 251, 1677, -70, 1651, -49, 691, 1119, 714, 1168, 854, 1183, 1014 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4 ), PoolIntArray( 5, 6, 7, 8 ), PoolIntArray( 3, 5, 8, 9, 10 ), PoolIntArray( 4, 3, 10, 11 ) ]
outlines = [ PoolVector2Array( -49, 691, 1119, 714, 1168, 854, 1183, 1014, 1170, 1263, 1238, 1529, 1241, 1743, 751, 1685, 770, 1247, 240, 1243, 251, 1677, -70, 1651 ) ]

[sub_resource type="NavigationPolygon" id=4]
vertices = PoolVector2Array( 656, 1600, 341, 1611, 330, 1355, 466, 1353, 645, 1351, 517, 1350, 482, 1239, 502, 1240 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4 ), PoolIntArray( 5, 4, 3 ), PoolIntArray( 5, 3, 6, 7 ) ]
outlines = [ PoolVector2Array( 341, 1611, 656, 1600, 645, 1351, 517, 1350, 502, 1240, 482, 1239, 466, 1353, 330, 1355 ) ]

[sub_resource type="NavigationPolygon" id=5]
vertices = PoolVector2Array( -62, 2456, -74, 1652, 250, 1675, 280, 1709, 1121, 2161, 1075, 2438, 712, 1712, 1152, 1964, 750, 1683, 1242, 1742, 1227, 1821 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 4, 5, 0, 3, 6, 7 ), PoolIntArray( 7, 6, 8, 9, 10 ) ]
outlines = [ PoolVector2Array( -74, 1652, 250, 1675, 280, 1709, 712, 1712, 750, 1683, 1242, 1742, 1227, 1821, 1152, 1964, 1121, 2161, 1075, 2438, -62, 2456 ) ]

[sub_resource type="NavigationPolygon" id=6]
vertices = PoolVector2Array( 1373, 1608, 1373, 1508, 1411, 1591, 1964, 2073, 2076, 2258, 2121, 2444, 1456, 2454, 1427, 2347, 1613, 1754, 1762, 1822, 1870, 1929, 1379, 2178, 1332, 1979, 1357, 1814, 1511, 1663, 1366, 1739, 1232, 1788, 1236, 1768, 1332, 1787 )
polygons = [ PoolIntArray( 0, 1, 2 ), PoolIntArray( 3, 4, 5, 6, 7 ), PoolIntArray( 8, 9, 10, 3, 7, 11, 12, 13 ), PoolIntArray( 2, 14, 8, 13, 15 ), PoolIntArray( 16, 17, 18, 13 ), PoolIntArray( 13, 18, 15 ), PoolIntArray( 2, 15, 0 ) ]
outlines = [ PoolVector2Array( 1236, 1768, 1232, 1788, 1357, 1814, 1332, 1979, 1379, 2178, 1427, 2347, 1456, 2454, 2121, 2444, 2076, 2258, 1964, 2073, 1870, 1929, 1762, 1822, 1613, 1754, 1511, 1663, 1411, 1591, 1373, 1508, 1373, 1608, 1366, 1739, 1332, 1787 ) ]

[sub_resource type="NavigationPolygon" id=7]
vertices = PoolVector2Array( 1933, 2036, 1916, 2007, 1984, 1983, 2026, 2009, 1363, 425, 1098, 72, 1087, -10, 2576, -16, 2517, 906, 1386, 531, 1386, 653, 1440, 754, 3775, 2006, 3831, 2000, 3824, 2453, 2399, 2456, 3175, 2024, 1147, 823, 1143, 800, 1439, 791, 1473, 1139, 2510, 1536, 1596, 1580, 1493, 1391, 1845, 1726, 1954, 1866, 3175, 1547, 2290, 2325, 2212, 2242, 2096, 2159 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 4, 5, 6, 7, 8 ), PoolIntArray( 9, 4, 8 ), PoolIntArray( 10, 9, 8, 11 ), PoolIntArray( 12, 13, 14, 15 ), PoolIntArray( 16, 12, 15 ), PoolIntArray( 17, 18, 11, 19 ), PoolIntArray( 20, 19, 11, 8, 21 ), PoolIntArray( 22, 23, 20, 21, 24 ), PoolIntArray( 25, 24, 21 ), PoolIntArray( 21, 26, 16, 15, 27, 25 ), PoolIntArray( 25, 27, 28, 3 ), PoolIntArray( 3, 2, 25 ), PoolIntArray( 3, 28, 29 ) ]
outlines = [ PoolVector2Array( 1933, 2036, 2026, 2009, 2096, 2159, 2212, 2242, 2290, 2325, 2399, 2456, 3824, 2453, 3831, 2000, 3775, 2006, 3175, 2024, 3175, 1547, 2510, 1536, 2517, 906, 2576, -16, 1087, -10, 1098, 72, 1363, 425, 1386, 531, 1386, 653, 1440, 754, 1143, 800, 1147, 823, 1439, 791, 1473, 1139, 1493, 1391, 1596, 1580, 1845, 1726, 1954, 1866, 1984, 1983, 1916, 2007 ) ]

[sub_resource type="NavigationPolygon" id=8]
vertices = PoolVector2Array( 2551, 462, 2576, 64, 2563, 494, 3192, 1356, 3189, 1472, 3169, 1561, 3172, 873, 3202, 886, 3828, -13, 3820.13, 1962.09, 3807, 2015, 3799, 1947, 3800, 886, 2519, 850, 2659, 367, 2624, 53, 2811, 53, 2796, 331, 2983, 367, 2866, 327, 2848, 53, 3355, 45, 3329, 365, 3038, 367, 3531, 1720, 3693, 1736, 3702, 1871, 3297, 1869, 3301, 1723, 3497, 1718, 3529, 1609, 3453, 1607, 3438, 975, 3445, 485, 3451, 2, 3447, 899, 2860, 1206, 2875, 1441, 2592, 1439, 2606, 944, 2769, 941, 2735, 862, 2985, 488, 2984, 1287, 3107, 1279, 3107, 1444, 2917, 1441, 2929, 1219, 2988, 1212, 3087, 954, 3093, 1213, 2808, 940, 2769, 889, 2813, 859, 3044, 490, 3282.2, 890.306, 3351, 894, 3700, 1028, 3707, 1607, 3294, 1607, 3398, 991, 3395, 925, 3294, 1007 )
polygons = [ PoolIntArray( 0, 1, 2 ), PoolIntArray( 3, 4, 5, 6, 7 ), PoolIntArray( 8, 9, 10, 11, 12 ), PoolIntArray( 13, 0, 2 ), PoolIntArray( 14, 15, 16, 17 ), PoolIntArray( 18, 14, 17, 19 ), PoolIntArray( 19, 20, 21, 22, 23, 18 ), PoolIntArray( 24, 25, 26, 27, 28, 29 ), PoolIntArray( 30, 24, 29, 31, 32 ), PoolIntArray( 33, 34, 8, 12, 35 ), PoolIntArray( 36, 37, 38, 39, 40 ), PoolIntArray( 41, 13, 2, 42 ), PoolIntArray( 43, 44, 45, 46 ), PoolIntArray( 43, 46, 47, 48 ), PoolIntArray( 49, 50, 48, 51 ), PoolIntArray( 51, 48, 47, 36, 40, 52 ), PoolIntArray( 53, 51, 52 ), PoolIntArray( 42, 18, 23, 54 ), PoolIntArray( 55, 7, 6, 54, 33, 35, 56 ), PoolIntArray( 57, 58, 30, 32 ), PoolIntArray( 32, 31, 59, 60 ), PoolIntArray( 52, 41, 42, 53 ), PoolIntArray( 6, 53, 42, 54 ), PoolIntArray( 61, 56, 35 ), PoolIntArray( 61, 35, 32, 60 ), PoolIntArray( 60, 59, 62 ) ]
outlines = [ PoolVector2Array( 2551, 462, 2519, 850, 2735, 862, 2769, 889, 2769, 941, 2606, 944, 2592, 1439, 2875, 1441, 2860, 1206, 2929, 1219, 2917, 1441, 3107, 1444, 3107, 1279, 2984, 1287, 2988, 1212, 3093, 1213, 3087, 954, 2808, 940, 2813, 859, 3172, 873, 3169, 1561, 3189, 1472, 3192, 1356, 3202, 886, 3282.2, 890.306, 3351, 894, 3395, 925, 3398, 991, 3294, 1007, 3294, 1607, 3453, 1607, 3497, 1718, 3301, 1723, 3297, 1869, 3702, 1871, 3693, 1736, 3531, 1720, 3529, 1609, 3707, 1607, 3700, 1028, 3438, 975, 3447, 899, 3800, 886, 3799, 1947, 3807, 2015, 3820.13, 1962.09, 3828, -13, 3451, 2, 3445, 485, 3044, 490, 3038, 367, 3329, 365, 3355, 45, 2848, 53, 2866, 327, 2796, 331, 2811, 53, 2624, 53, 2659, 367, 2983, 367, 2985, 488, 2563, 494, 2576, 64 ) ]

[sub_resource type="Environment" id=1]
tonemap_mode = 1
tonemap_exposure = 1.54
glow_enabled = true
glow_blend_mode = 0
glow_hdr_threshold = 1.5
glow_hdr_luminance_cap = 2.0
glow_bicubic_upscale = true
glow_high_quality = true

[node name="GameScene" type="Node2D"]
script = ExtResource( 12 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -18.537

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -1624.0
margin_top = -1139.0
margin_right = 5680.0
margin_bottom = 3287.0
rect_pivot_offset = Vector2( 716, 2213 )
color = Color( 0.431373, 0.607843, 0.501961, 1 )

[node name="Grass" type="Sprite" parent="."]
position = Vector2( 2493, 1707 )
rotation = 3.14159
scale = Vector2( 15.3542, 9.21123 )
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1883.12, 1227.5 )
scale = Vector2( 3.45396, 4.10033 )
texture = ExtResource( 3 )

[node name="CharacterSelection" parent="." instance=ExtResource( 15 )]

[node name="Player" parent="CharacterSelection" groups=["Object"] instance=ExtResource( 2 )]
position = Vector2( 537, 1501 )
scale = Vector2( 2, 2 )

[node name="FreeRoamCamera" parent="CharacterSelection" instance=ExtResource( 16 )]

[node name="Navigation2D" type="Navigation2D" parent="."]
edge_connection_margin = 40.0

[node name="EnemySpawner" type="Node2D" parent="Navigation2D"]
script = ExtResource( 4 )

[node name="SpawnCooldown" type="Timer" parent="Navigation2D/EnemySpawner"]
wait_time = 0.3

[node name="WaveCooldown" type="Timer" parent="Navigation2D/EnemySpawner"]
wait_time = 4.0
autostart = true

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Navigation2D"]
navpoly = SubResource( 2 )

[node name="NavigationPolygonInstance2" type="NavigationPolygonInstance" parent="Navigation2D"]
navpoly = SubResource( 3 )

[node name="NavigationPolygonInstance3" type="NavigationPolygonInstance" parent="Navigation2D"]
navpoly = SubResource( 4 )

[node name="NavigationPolygonInstance4" type="NavigationPolygonInstance" parent="Navigation2D"]
navpoly = SubResource( 5 )

[node name="NavigationPolygonInstance5" type="NavigationPolygonInstance" parent="Navigation2D"]
navpoly = SubResource( 6 )

[node name="NavigationPolygonInstance6" type="NavigationPolygonInstance" parent="Navigation2D"]
navpoly = SubResource( 7 )

[node name="NavigationPolygonInstance7" type="NavigationPolygonInstance" parent="Navigation2D"]
position = Vector2( 0, -2 )
navpoly = SubResource( 8 )

[node name="Turret_container" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 6 )]

[node name="SwitchWeapons" parent="CanvasLayer" instance=ExtResource( 14 )]

[node name="MysteryBoxUI" parent="CanvasLayer" instance=ExtResource( 19 )]

[node name="DoorUI" parent="CanvasLayer" instance=ExtResource( 20 )]

[node name="Shop" parent="CanvasLayer" instance=ExtResource( 9 )]
margin_left = 25.0
margin_top = -23.0
margin_right = 25.0
margin_bottom = -23.0

[node name="BuildModeHUD" parent="CanvasLayer" instance=ExtResource( 10 )]

[node name="CharacterSelectionHUD" parent="CanvasLayer" instance=ExtResource( 17 )]

[node name="Pause" parent="CanvasLayer" instance=ExtResource( 1 )]
visible = false

[node name="Structure" type="StaticBody2D" parent="." groups=["Collision", "Object"]]

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="Structure" groups=["Object"]]
position = Vector2( -29.2466, -46.3296 )
scale = Vector2( 1.008, 1.0793 )
polygon = PoolVector2Array( 2825, 309, 2854, 309, 2847, 68, 3374, 68, 3371, 421, 3080, 421, 3077, 455, 3410, 449, 3402, 33, 2602, 36, 2598, 457, 2958, 456, 2951, 422, 2632, 423, 2630, 67, 2827, 71 )

[node name="CollisionPolygon2D7" type="CollisionPolygon2D" parent="Structure" groups=["Object"]]
polygon = PoolVector2Array( 3354, 932, 3363, 973, 3250, 971, 3250, 1666, 3460, 1661, 3448, 1693, 3254, 1686, 3258, 1916, 3743, 1918, 3750, 1686, 3575, 1689, 3573, 1663, 3746, 1660, 3749, 968, 3476, 968, 3479, 932, 3776, 937, 3774, 1952, 3227, 1954, 3227, 929 )

[node name="CollisionPolygon2D6" type="CollisionPolygon2D" parent="Structure" groups=["Object"]]
position = Vector2( -91.6228, 0 )
scale = Vector2( 1.02747, 1 )
polygon = PoolVector2Array( 2741, 897, 2743, 925, 2596, 931, 2595, 1458, 2898, 1455, 2899, 1247, 2920, 1250, 2917, 1463, 3125, 1459, 3124, 1265, 3014, 1268, 3014, 1247, 3122, 1247, 3117, 933, 2855, 934, 2855, 895, 3149, 893, 3156, 1501, 2565, 1492, 2560, 898 )

[node name="CollisionPolygon2D8" type="CollisionPolygon2D" parent="Structure" groups=["Object"]]
position = Vector2( -54.398, 0 )
scale = Vector2( 1.03404, 1 )
polygon = PoolVector2Array( 475, 1293, 469, 1327, 347, 1335, 359, 1652, 721, 1639, 714, 1322, 582, 1326, 584, 1287, 759, 1288, 749, 1671, 324, 1682, 322, 1294 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Structure" groups=["Object"]]
polygon = PoolVector2Array( 3838, -37, 3846, 2462, -96, 2473, -79, -39, -1516, -839, -1516, 4073, 6450, 4062, 6396, -978, -1516, -882, -85, -52 )

[node name="Water" type="StaticBody2D" parent="." groups=["Collision"]]

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Water" groups=["Collision"]]
position = Vector2( -199.357, -0.00012207 )
scale = Vector2( 1.12801, 1 )
polygon = PoolVector2Array( 1268, 1822, 1355.8, 1838, 1318, 1994, 1379, 2183, 1406, 2364, 1464, 2480, 1420, 2483, 1396, 2411, 1371, 2365, 1358, 2199, 1306, 2061, 1268, 2184, 1260, 2254, 1225, 2427, 1239, 2491, 1169, 2489, 1153, 2430, 1172, 2315, 1206, 2067, 1220, 1975 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Water" groups=["Collision"]]
position = Vector2( -67.1969, 0 )
scale = Vector2( 1.03017, 1 )
polygon = PoolVector2Array( 1220, 908, 1356, 873, 1447, 907, 1450, 1057, 1439, 1189, 1485, 1449, 1564, 1578, 1629, 1647, 1670, 1685, 1810, 1744, 1857, 1782, 1931, 1885, 1966.86, 1966, 1920.26, 1976, 1907, 1942, 1826, 1860, 1780, 1818, 1649, 1753, 1574, 1689, 1456, 1602, 1430, 1558, 1387, 1442, 1384, 1610, 1358, 1758, 1280, 1755, 1287, 1598, 1264, 1430, 1213, 1219, 1212, 1090, 1223, 1017 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Water" groups=["Collision"]]
polygon = PoolVector2Array( 2034, 2056, 1980, 2062, 2093, 2232, 2155, 2367, 2165, 2437, 2201, 2478, 2261, 2483, 2195, 2403, 2182, 2330, 2157, 2270, 2217, 2321, 2247, 2370, 2298, 2402, 2352, 2483, 2396, 2480, 2372, 2440, 2328, 2372, 2268, 2346, 2244, 2275, 2092, 2169 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Water" groups=["Collision"]]
position = Vector2( -91.1745, 0 )
scale = Vector2( 1.05835, 1 )
polygon = PoolVector2Array( 819, -18, 870, 81, 870, 166, 906, 234, 923, 295, 985, 382, 999, 410, 1027, 558, 1139, 677, 1184, 749, 1285, 715, 1391, 719, 1351, 628, 1364, 488, 1281, 331, 1179, 181, 1090, 88, 1110, -46 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="ImpactManager" type="Node2D" parent="."]

[node name="Blood" parent="ImpactManager" instance=ExtResource( 7 )]

[node name="MysteryBox" parent="." instance=ExtResource( 18 )]
position = Vector2( 1539, 1829 )

[node name="Door_container" type="Node2D" parent="."]
position = Vector2( 3010, 438 )

[node name="Door" parent="Door_container" instance=ExtResource( 8 )]
position = Vector2( -2, -6 )
scale = Vector2( 6, 6 )

[connection signal="timeout" from="Navigation2D/EnemySpawner/SpawnCooldown" to="Navigation2D/EnemySpawner" method="_on_SpawnCooldown_timeout"]
[connection signal="timeout" from="Navigation2D/EnemySpawner/WaveCooldown" to="Navigation2D/EnemySpawner" method="_on_WaveCooldown_timeout"]
